# ChangeLog for dev-db/mydumper
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/mydumper/ChangeLog,v 1.8 2015/02/03 06:48:01 yngwin Exp $

  03 Feb 2015; Ben de Groot <yngwin@gentoo.org> -mydumper-0.5.2.ebuild:
  remove old (bug #514100)

*mydumper-0.6.2 (30 Sep 2014)

  30 Sep 2014; Brian Evans <grknight@gentoo.org> +mydumper-0.6.2.ebuild,
  -mydumper-0.5.1.ebuild:
  Non-maintainer commit; version bump needed for infra wrt bug 519454; drop old

  24 Dec 2013; Sergey Popov <pinkbyte@gentoo.org> mydumper-0.5.1.ebuild,
  mydumper-0.5.2.ebuild:
  Fix HOMEPAGE

  17 Mar 2013; Markos Chandras <hwoarang@gentoo.org> metadata.xml:
  Add proxy-maintainers to metadata.xml

*mydumper-0.5.2 (31 Dec 2012)

  31 Dec 2012; Diego E. Pettenò <flameeyes@gentoo.org> +mydumper-0.5.2.ebuild:
  Version bump.

  26 May 2012; Christian Ruppert <idl0r@gentoo.org> mydumper-0.5.1.ebuild:
  Add ~x86 keyword

  03 May 2012; Jeff Horelick <jdhore@gentoo.org> mydumper-0.5.1.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

*mydumper-0.5.1 (05 Nov 2011)

  05 Nov 2011; Diego E. Pettenò <flameeyes@gentoo.org> +metadata.xml,
  +mydumper-0.5.1.ebuild:
  Initial import of mydumper ebuild by Pavel Stratil (who will proxy maintain
  it).