@@ -2,25 +2,13 @@
 Hash: SHA256
 
 DIST mydumper-0.6.2.tar.gz 40165 SHA256 fa28563e8967752828954c5d81e26ef50aad9083d50a977bf5733833b23e3330 SHA512 ef9e48cc481f2674456659c061c45f3cb056180ab5576805e75d458658e94998758b894e45ddc06fb716c1d37fedefb644158f07cf6e77f4b5477663e954eb83 WHIRLPOOL 867b7efa6ca00dcfbb32f5dda2b63de038d0da3ac1a127059cbfdae9af577fef74868c38dad2bd5b5a9b4de76f7d108fcb6232b27c41d3062f413eac4cac843b
-EBUILD mydumper-0.6.2.ebuild 1045 SHA256 21283656ec2237ff952bf7c3de02f045092b50bec9d4ec271b35f4e2174251e4 SHA512 4721ecf4a92b2143325a84e2d3839673e4fd57d7bd1b3d77540e299b47c2beea8afac9c723ceb9b9662ff4b66fa732b241092c9441d21a4e0aca2748a2840b96 WHIRLPOOL 78cfc8e62e8b3df6c85d4174934d72dc8fa89e499bbf640db52224f9c9a50205703c3baaff4fc7b67251b3252a3bf8445b5d2aae6702c7ea1a60b3312e5e101c
-MISC ChangeLog 1287 SHA256 875183d75376a5fd6d22b322583eb18d39751b78245b7f89c6c961f9ab9a56f3 SHA512 00a1307c4d2698c4c5812d065979c0f6cc47c18a994bf25a106f3d0de84e28e11f452e4f41aafa30f28db6a06e407b23fe7c40a8d9c67abb9565f0ed95b0388d WHIRLPOOL f26b2174288c93997fb163fb8cecb92cfcff8ed79e0d04b13c62b24b04229d71b31ef6d21fab8d39a45a90d4a9c5fa5fc5036ba5675a9bfb0962ac29531febba
+EBUILD mydumper-0.6.2.ebuild 1049 SHA256 528afbc827c09d0e2871ec73dd189346dc9497db9f5f92bca48db73e5f509f70 SHA512 9bd961ae8033868af1e5530eeddfda1fb34d1a4d80e57d06ae0313888dd564bef12bf7c2a37d69954cc21371ffaa5f90150e6aad98baaa5976a8d374f04e59a1 WHIRLPOOL 1d97e6d8cb382a75d50bb86cd59d0c6e16a40afc476c7a1393bffbd43f72dde80982e8996f9a6571e872f29fa8be6782068172da96d1cc0b5fe9ce9633275e8a
+MISC ChangeLog 1437 SHA256 abbbfc9cd0a2ee4ab115be62eab98f76aa9b548d9efe0ad95d9331289f477680 SHA512 db5608ee15eb49615a16bf4a980dca7eef836b1bdeee07d95382102cb8213537670e70b1e4936355f5b9c33af2f5a497aee7d54ae60ce82439cc70b51bcf881d WHIRLPOOL c444a22e998157c77d6268f811a7aa77edbf0c47e946f3f958f9c92daa9148b5fb6de1de548ab51515bce8edf23cae929efd671823e36caa76da4f5ed2ce2b99
 MISC metadata.xml 393 SHA256 46c6560720d3c2505d0fe159bd082bdf654b55b05fff47af266dc9b322a5d10a SHA512 a24121fb2578871235fcdb3920446007d8f1c1a5ea2e6c48a40fd31ad2c0465fd4c3749427d3017fe7ea74bfe6aa5f784341a9bf27d5de34f610c912d33939ce WHIRLPOOL 659f4f30ac0a7ec8bd0dd8291a95539d1cd4abbb1270a6071c11d2d13d1f0e038b99955cdcf5421c876d4cae6eaa74eb232612751b610461bcd6ccfe9430d5de
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0
+Version: GnuPG v2
 
-iQJ8BAEBCABmBQJU0G8nXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ5MTlDREQ0NUU5Mjc4RkU2RjJDNTAyNzU0
-RkRGOUNGRDJGQUM1MTRFAAoJEE/fnP0vrFFO6M0QAMaDtRZNU+snlQ6fwm8aVFAp
-IEao/D1TBDYxNHZ7g00B3DdZ1LVGOafvYbIc2/wmfk1WkfoxDn7TMiUtNB1eOLdC
-7nJAR39jrPeBzGwaRiJ/7U+Go/15Xesf9DeKBlVpByNaVr6Ttk4AwO53k1LfLy7j
-evTfdBwqqGOCbxgqwTq2ZG75UmbFAtOiRwVlI8qqLD+Qc02z/DsxcuX3iYTsPE9A
-B/YFI1ILl6PzJLWRALsHF5hbEb79V6h5QLRe4xElrBZ9sLDLW4b0YgbHkNTTcVpI
-duFVG9cVBzw55/5RMQsnPt14O1EXkJJfEML+ykg900T/RGutVdOtByJewl2ybLKz
-JYCf3l7WIeSHxGrcPRMbdHPH+59WajZsiE5gwLFqyCH4tKGEW+K/zwgclvbvSEZD
-tiPREXoWlErN0A527DLKnhBvwCD7Gkd5sxfx3c2dMPa+gQioFBbjDCf/Nhzdfgrk
-VGClsh/ntQKy7KsrMbnEgbURMEM1OwxSjv8+ZIqF3SbWRh4KWCaWcvIQpuB9dx6I
-gm8gsQf5viBzHRWteISQE+08sVAgx+hvxxewH6wIwVVQA/OX8xlK26dQ9N9VF9hs
-Thvy3lgEzukCM8LOn1gQxgyrJWg4ndDXGZAG2CXZCO/PTq2de2Th0Sir+QTJXblI
-7jNrCtYyTXe8yQSkjav2
-=PeBY
+iEYEAREIAAYFAlUZ5zIACgkQso7CE7gHKw0m7gCg1iKD2sjmvjU2I8qjsOKNkb33
+Sx8AoKGqu1Auo9wzGwBJ0r5mdlYQ9Ern
+=Xccr
 -----END PGP SIGNATURE-----
