@@ -9,13 +9,13 @@ EBUILD transformers-0.2.2.0.ebuild 776 SHA256 459cfe7ec0c58568313bb849765f325271
 EBUILD transformers-0.3.0.0-r1.ebuild 846 SHA256 ca477f083c59d86cfb6bf5709a148b014abfac1e5ec7aa768003201354d5b6cc SHA512 3c3e7d4c4af9eab5fb876ef359c94ffb79dd4ffb08ca4a233d3ded0e65ae5d90e6c065d33282319ee8a12dc6d256331c5631341139d4dd6b01198b76098163fe WHIRLPOOL 050fed901a77ea72abaf2da020be862672bd0df413e9d25e4b502559a32308001560b8be23a4abcbf781e859f953c329c658bf7b39636d82f5a93350de6cae3a
 EBUILD transformers-0.3.0.0.ebuild 729 SHA256 25b6a31ef74ced1598b765c5a933cbf61f5a3df9b8913f4f8de768d2559714d9 SHA512 5c8a14c42e33472748f6eece9ee8ffbdf440277c32a6ee9615c1822308256814bbc74e50b4ec00702945919d692f4324c1f957b500b18b41278af50de8b6803b WHIRLPOOL bf8e2dba35b2b8cac23e181732aed79ae425bdfc281959adc996b19169536ee5bb9ecd78d2c8a823ead4e800616d97bb14952a4f535befe789bb386883f2e3a8
 EBUILD transformers-0.4.1.0.ebuild 791 SHA256 5b65cea62c16d8c1b4a8be8c3475561c2deca8b62d63ad4bfc3f13d61b01d81e SHA512 cfe322cc43a2b72135ed2ed6441c7336af9138dfd918f361689cfdc03ecc1a63665bb3832f60cabc0cb3a6216439c5f6fc13a4c409b604aaed2e1f272787d875 WHIRLPOOL 777cda7065ba6a0e24074bfc628cacfbd07b1ec752c265e09062613e27b22762c0ec7e21e0b2f4d910558b1b947698833d13603c0e11cc28f821fe919513e797
-EBUILD transformers-0.4.2.0.ebuild 821 SHA256 a719c90564c556b91cc6d77f79ad65a2f59c37eb805300693c93bde6650a4f10 SHA512 d776b00b19f409b77c846984990d3645b21c11016548827d020d3bc5f076e9741ece5806ed9352a12c084e32400fa7444cb74c9013d9fba6f782e38c2af4b6e6 WHIRLPOOL 893fc60d9d8476ba08a4e4ed3c95cb027a2be4371f0d2fc50b2b5731da3737be2a896efd239797342ef3437555173bb8e47828630f9fbf7101a8a488174c3313
-MISC ChangeLog 3318 SHA256 c6fc92125e6b94956393fbf51af30985fac521e74892df4925a4c3714c1bf082 SHA512 9cf14c9265c237eae155003483fbfecb0b0d77f7efb20899010c211a08dd8ef2f8e36f0b15ab517fe0adf6e58ec86f3302bfec49a0db10ceb5545ad3e37c7318 WHIRLPOOL e16b1bd4ffbccf9aab024dcb5983e58ba86deed4232ee1c3420e29727c7188155c25d6e2259e5fce3ca2658bb60c95f2e7b11c8cae2d089038fd52ab0439df28
+EBUILD transformers-0.4.2.0.ebuild 883 SHA256 085cd5ac717b431384c975273e581ab4cb6da75989dcee0a71943f5c3836776f SHA512 12ba6d1d339e36cddc9b5df23be5f8d10793e79736f303d1290ab108265f223137cabf66946c652e0f43353b317442c2568b0f0cc06426ce541f141c50b76c03 WHIRLPOOL f544b3c53a7795392f02027af8be45216aa15c0c5742ba690924edcd6e8aacb424e90041c5b4d68e5823eae37c8958b83ef55271d763518f6d25507c515b5c71
+MISC ChangeLog 3474 SHA256 fc057ca96e598c5bbf473dc45a87bbb3f04316e82cc40ff9eb17d9955f2a2e92 SHA512 e39cb6c556cb1ba7e3c4c816f0416776e168ff69b6062fec7f15511ba858c1894a982762e386268674d6c856c390fa92f3030a6334d09dc345d3d7b8bcd4d776 WHIRLPOOL 5ec53b54c9c035d95d456d10620f081a2585e9a9d3ea547d279199517d260947aeb94046c446bff1eb96f7bd01063bde6c96f8202491e045aee4de18b5392574
 MISC metadata.xml 926 SHA256 27cf99269d2bae07722bcf7835f15c70a33a775828af242e8a8e0ec3191f024c SHA512 c0055916ec8031ce665165b138c1ac6253f8f62699ca5a29f44338e0df1b72ba249adcb839f930f0219bec1b851e347f65f3388ac48d2a218ab1fb5cd2de16c0 WHIRLPOOL 36c21ca8c37b41e040b7a046adc248f1f68280aedaffba3ad1c6d6ee71776b635b3e2aba3574c80107910cfb380759d260f7202791c3e5bd250d7e110b0d29fc
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlSZ8jwACgkQcaHudmEf86qqxgCaA5Kk9auVnc6Vuzy992hV3V8D
-eJ8An2BUw+zM4AvSeE5PT6j8/px2iKms
-=9iWS
+iF4EAREIAAYFAlUZ5Z0ACgkQoBEVQmGOlx+IBQD7B/3I44XWjh9ujehEgRHXiKYf
+7T+L2SZNB1kS1h3rnUMA/0ChW8wQbI62nsWRG0Yi7j9p2JolcyXxAUPmV6KcWeHp
+=outQ
 -----END PGP SIGNATURE-----
