@@ -1,5 +1,5 @@
 DEFINED_PHASES=compile configure install prepare test
-DEPEND=dev-libs/libpcre virtual/mysql dev-libs/glib:2 virtual/pkgconfig doc? ( dev-python/sphinx ) sys-devel/make >=dev-util/cmake-2.8.12 userland_GNU? ( >=sys-apps/findutils-4.4.0 )
+DEPEND=dev-libs/libpcre virtual/mysql dev-libs/glib:2 virtual/pkgconfig doc? ( <dev-python/sphinx-1.3 ) sys-devel/make >=dev-util/cmake-2.8.12 userland_GNU? ( >=sys-apps/findutils-4.4.0 )
 DESCRIPTION=A high-performance multi-threaded backup (and restore) toolset for MySQL and Drizzle
 EAPI=5
 HOMEPAGE=https://launchpad.net/mydumper
@@ -10,4 +10,4 @@ RDEPEND=dev-libs/libpcre virtual/mysql dev-libs/glib:2
 SLOT=0
 SRC_URI=http://launchpad.net/mydumper/0.6/0.6.2/+download/mydumper-0.6.2.tar.gz
 _eclasses_=cmake-utils	0430c386d85cec959d72640afd63ea91	eutils	9fb270e417e0e83d64ca52586c4a79de	flag-o-matic	c263990f1b677b0f0be0a3299f179762	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	b99aa37f734b5d426efd83b2f271cece	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=767ba568d03ca89591976b921a7fe35f
+_md5_=cc3cf3959423670e496b89ca5e0a35a8
