@@ -10,4 +10,4 @@ RDEPEND=>=dev-lang/ghc-7.4.1:=
 SLOT=0/0.4.2.0
 SRC_URI=mirror://hackage/packages/archive/transformers/0.4.2.0/transformers-0.4.2.0.tar.gz
 _eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	ghc-package	48ae4e0fd75e1c8047c4b7f507d5debc	haskell-cabal	98224cebe581f23d62c7fbb75c07fd90	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	toolchain-funcs	b99aa37f734b5d426efd83b2f271cece	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=8c46dd6d91e882df940a47f01a7197a9
+_md5_=6c5a1ce8fb97b5a53e8aa9509b877f2f
