@@ -1,6 +1,9 @@
 # ChangeLog for dev-db/mydumper
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/mydumper/ChangeLog,v 1.8 2015/02/03 06:48:01 yngwin Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/mydumper/ChangeLog,v 1.9 2015/03/31 00:15:29 idella4 Exp $
+
+  31 Mar 2015; Ian Delaney <idella4@gentoo.org> mydumper-0.6.2.ebuild:
+  set upper border limit to sphinx for doc build, fixes bugs 544360 & 543864
 
   03 Feb 2015; Ben de Groot <yngwin@gentoo.org> -mydumper-0.5.2.ebuild:
   remove old (bug #514100)
